--- a/Capitulo1/introduccion.tex
+++ b/Capitulo1/introduccion.tex
@@ -32,9 +32,9 @@ Como resultado de esta tesis se muestra una comparación entre el diseño realiz
 \section{Antecedentes y justificación}
 
 
-Uno de los mayores avances tecnológicos de la humanidad ha sido el desarrollo de aceleradores de partículas, ya que tienen grandes aplicaciones en las áreas médicas, militares y alimentarias. Podemos hacer referencia, en medicina, a un echo actual, el veinte porciento de los fármacos radiactivos que se inyectan en los pacientes son producidos en aceleradores del tipo sincrotrón \cite{ProyectoLNLS5}. Los cuales aceleran los protones típicamente a energías de 40 MeV. Estos aceleradores son diseñados para funcionar de manera confiable produciendo haces de alta intensidad con un mínimo de intervención humada, he allí la meta en esta tesis.\\
+Uno de los mayores avances tecnológicos de la humanidad ha sido el desarrollo de aceleradores de partículas, ya que tienen grandes aplicaciones en las áreas médicas, militares y alimentarias. Podemos hacer referencia, en medicina, a un hecho actual, el veinte porciento de los fármacos radiactivos que se inyectan en los pacientes son producidos en aceleradores del tipo sincrotrón \cite{ProyectoLNLS5}. Los cuales aceleran los protones típicamente a energías de 40 MeV. Estos aceleradores son diseñados para funcionar de manera confiable produciendo haces de alta intensidad con un mínimo de intervención humana, he allí la meta en esta tesis.\\
 
-En el pasado la radio terapia utilizaba agujas de radio o rayos gamma de cobalto radioactivo, la desventaja de este tipo de maquinaria es que tienen que tener un funcionamiento ininterrumpido, y con el pasar del tiempo su energía decae y es necesario cambiar la fuente radioactiva y resguardarla del medio ambiente, la cual representa un peligro para la humanidad y un problema sin solución actual, ya que la contaminación es latente.\\
+En el pasado la radioterapia utilizaba agujas de radio o rayos gamma de cobalto radioactivo, la desventaja de este tipo de maquinaria es que tienen que tener un funcionamiento ininterrumpido, y con el pasar del tiempo su energía decae y es necesario cambiar la fuente radioactiva y resguardarla del medio ambiente, la cual representa un peligro para la humanidad y un problema sin solución actual, ya que la contaminación es latente.\\
 
 Otro de los tantos ejemplos de las aplicaciones de estas tecnologías es en la rama de la fusión nuclear, ya que estas requieren fuentes de alto voltaje para su funcionamiento, en Mexico existe desarrollo en esta área. En la parte experimental, en 1978 se inició un proyecto mexicano de fusión termonuclear y, en 1983, se propuso el diseño de una pequeña máquina experimental llamada “Novillo”. Este Tokamak fue diseñado y construido por trabajadores mexicanos del ININ (Instituto Nacional de Investigaciones Nucleares) en el Centro Nuclear de Salazar, México.El trabajo con este acelerador, permitirá que el país se incorpore a una de las áreas de investigación en Física de Plasmas más prometedoras para el futuro energético. La infraestructura existente y la experiencia adquirida, permitirán contribuir al desarrollo de una futura aplicación de la energía nuclear de fusión, la cual será una fuente alterna de energía en el presente siglo. La continuación de investigaciones en fusion permitira a Mexico, el ingreso a programas del Organismo Internacional de Energía Atómica\cite{ININ}.\\
 
@@ -93,6 +93,4 @@ El diseño adecuando de un sistema de generación de alto voltaje nos permite ll
 
 \section{Estructura de la tesis}
 
-Este trabajo está dividido en XX capítulos. Al principio se encuentra el desarrollo de un trabajo de tal cosa xx este es un ejemplo.
-\\\\
-Finalmente se encuentra la parte de... vamos a seguir con mas comentarios, la parte del comentario comentario comentario nuevo, este sera el tercer comentario de prueba.
+Este trabajo está dividido en 5 capítulos. El primero habla sobre un resumen del trabajo realizado, el segundo es un marco teórico que pone en contexto el desarrollo del proyecto y expone las partes técnicas, en el capitulo 3 se expone el proceso y la metodología realizada, el capitulo 4 incluye un breve análisis de resultados el cual muestra una síntesis de las mediciones y el trabajo teórico, y por ultimo un análisis de resultados. 
