--- a/Capitulo4/resultados_y_analisis.tex
+++ b/Capitulo4/resultados_y_analisis.tex
@@ -28,9 +28,9 @@ Se ha logrado mediante la implementación de un sistema de inversor de voltaje a
 \end{figure}
 \newpage
 
-Como observamos se ha obtenido voltajes sin perturbaciones y con un muy bajo riso asociado a él. Se realizaron diez mil mediciones por cada distribución y a partir de ella podemos observar un voltaje RMS de 4.15v a 93v, 0.00027v para 200v, 0.0011v para 600v y 0.0024v para 986v respectivamente. \\
+Como observamos se ha obtenido voltajes sin perturbaciones y con relativo bajo rizo asociado a él. Se realizaron diez mil mediciones por cada distribución y a partir de ella podemos observar un voltaje RMS de 4.15v a 93v, 0.00027v para 200v, 0.0011v para 600v y 0.0024v para 986v respectivamente. \\
 
-Utilizando la ecuación 2.6 podemos calcular el riso asociado a la señal. Se observa en la tabla los siguientes resultados de nuestras mediciones con sus variables correspondientes. 
+Utilizando la ecuación 2.6 podemos calcular el rizo asociado a la señal. Se observa en la tabla los siguientes resultados de nuestras mediciones con sus variables correspondientes. 
 
 \begin{table}[H]
 \begin{tabular}{@{}llll@{}}
@@ -42,5 +42,6 @@ Voltaje   & Frecuencia & Dutty & Riso \\ \midrule
 986 & 0.0        & 0.0   &   0.0\\ \bottomrule
 \end{tabular}
 \end{table}
+
 
 Los resultados indican que se ha desarrollado una fuente con requerimientos suficientes para trabajos de laboratorio. 
