--- a/Capitulo5/conclusiones.tex
+++ b/Capitulo5/conclusiones.tex
@@ -1,2 +1,2 @@
 \chapter{Conclusiones}
-Se logro la construccion satisfactoria de una fuente de alto voltaje controlada digitalmente mediante un computador y de forma manual mediante un microcontrolador integrado. Los voltajes alcanzados fueron mas de 2KV con una potencia de hasta 40W y un riso en el orden de micro volts.
+Se logro la construcción satisfactoria de una fuente de alto voltaje controlada digitalmente mediante un computador y de forma manual mediante un microcontrolador integrado. Los voltajes alcanzados fueron mas de 2KV, limitados por un con una potencia de hasta 40W y un riso en el orden de micro volts.
