--- a/tesis.tex
+++ b/tesis.tex
@@ -81,7 +81,7 @@ Facultad de ciencias Físico Matemáticas
 \setlength{\parskip}{20pt}
 
 \begin{Large}
-DESARROLLO DE UN SISTEMA DE ALTO VOLTAJE PARA ACELERADORES DE PARTICULAS 
+DESARROLLO DE UN SISTEMA DE ALTO VOLTAJE PARA ACELERADORES DE PARTÍCULAS 
 \end{Large}
 
 \setlength{\parskip}{40pt}
@@ -116,8 +116,8 @@ Juan Francisco Verdugo Arredondo
 
 \begin{normalsize}
 DIRECTOR:\\
-Carlos Duarte galván\\
-Christian Valerio Lizarraga\\
+Dr. Carlos Duarte galván\\
+Dr. Christian Valerio Lizarraga\\
 \end{normalsize}
 
 
@@ -136,14 +136,14 @@ Culiacán, Sinaloa, 2018
 
 
 
-\begin{large}
+\begin{Large}
 
 \include{Agradecimientos/Dedicatoria}       % Comentar línea si no se usa
 \include{Agradecimientos/Agradecimientos}   % Comentar línea si no se usa 
 \include{Declaracion/Declaracion}           % Comentar línea si no se usa
 %\include{Resumen/Resumen}                   % Comentar línea si no se usa
 
-\end{large}
+\end{Large}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                   ÍNDICES                         %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -153,7 +153,7 @@ Culiacán, Sinaloa, 2018
 \tableofcontents            % Genera el índice 
 %: ----------------------- list of figures/tables ------------------------
 \listoffigures              % Genera el ínidce de figuras, comentar línea si no se usa
-\listoftables               % Genera índice de tablas, comentar línea si no se usa
+%\listoftables               % Genera índice de tablas, comentar línea si no se usa
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -162,7 +162,7 @@ Culiacán, Sinaloa, 2018
 % the main text starts here with the introduction, 1st chapter,...
 \mainmatter
 \def\baselinestretch{1.5}                   % Interlineado de 1.5
-\doublespacing
+%\doublespacings
 
 \begin{Large}
 
@@ -219,6 +219,12 @@ SISTEMA DE ENCENDIDO SIN DISTRIBUIDOR (DIS)'' \url{https://repositorio.espe.edu.
 \bibitem{fusor}University of Utah Marriott Library Special Collections. Archived from the original on 2013-10-21. Retrieved 2007-07-05. \url{https://wayback.archive-it.org/all/20131021170353/http://content.lib.utah.edu/cdm/ref/collection/UU_EAD/id/2160}
 
 \bibitem{fusion}FUSIÓN NUCLEAR. \url{http://www.inin.gob.mx/temasdeinteres/fusionnuclear.cfm}
+
+\bibitem{fara}Biografia Michael Faraday. \url{http://dcb.fi-c.unam.mx/CoordinacionesAcademicas/FisicaQuimica/ElectricidadMagnetismo/biografias/5\%20Michael\%20Faraday.pdf}
+
+\bibitem{databts}BTS 7960 High Current PN Half Bridge NovalithIC. \url{http://www.robotpower.com/downloads/BTS7960_v1.1_2004-12-07.pdf}
+
+
 
 
 
