--- a/Capitulo3/diseno_experimento.tex
+++ b/Capitulo3/diseno_experimento.tex
@@ -8,9 +8,9 @@
 \chapter{Metodología}
 En este capítulo se expone todo el desarrollo de la fuente de alto voltaje en cuestión; diseño del sistema, fabricación del sistema, diseño del firmware del micro controlador, implementación y por último el método experimental.\\
 
-El sistema esta compuesto por dos partes, hardware y firmware, el hardware se compone de tres partes como vemos en la figura 3.1: parte digital de control, inversor de voltaje y rectificador multiplicador. \\
+El sistema esta compuesto por dos partes, hardware y firmware, el hardware se compone de tres partes como vemos en la figura 3.5: parte digital de control, inversor de voltaje y rectificador multiplicador. \\
 
-Por otro lado el firmware consiste en los programas que realizan el control completo de la generación de alto voltaje por medio del desarrollo de un ambiente gráfico al que el usuario tiene acceso,  control para el senseo de voltajes, corrientes y protecciones necesarias para el correcto funcionamiento del sistema en general, así como también un control para el inversor de voltaje, mediante la implementación de un ADC ( Analog to Digital Converter) a la salida de una devanado de baja en el transformador de alto voltaje el cual controla la salida de alto voltaje. Observemos de manera gráfica la topologia del sistema en la figura 3.1. 
+Por otro lado el firmware consiste en los programas que realizan el control completo de la generación de alto voltaje por medio del desarrollo de un ambiente gráfico al que el usuario tiene acceso,  control para el senseo de voltajes, corrientes y protecciones necesarias para el correcto funcionamiento del sistema en general, así como también un control para el inversor de voltaje, mediante la implementación de un ADC ( Analog to Digital Converter) a la salida de una devanado de baja en el transformador de alto voltaje el cual controla la salida de alto voltaje. Observemos de manera gráfica la topología del sistema en la figura 3.5S. 
 \newpage
 
 
@@ -30,7 +30,7 @@ Por otro lado el firmware consiste en los programas que realizan el control comp
 
 \section{Materiales utilizados}
 
-La medición y comprobación del alto voltaje no es tan sencilla si no se tienen las herramientas necesarias para ello. La utilización de osciloscopios (figura 3.2), voltimetros (figura 3.3) y sistemas de medición se ve afectado debido a que en su mayoría los voltajes soportados por los equipos son apenas de unos cuantos miles de volts. Es por ello que en este proyecto se han requerido herramientas como lo son las sondas divisoras de voltaje, similar a la que se aprecia en la figura 3.1, permitiendo así la utilización de las herramientas antes comentadas aquí.\\
+La medición y comprobación del alto voltaje no es tan sencilla si no se tienen las herramientas necesarias para ello. La utilización de osciloscopios (figura 3.3), voltimetros (figura 3.2) y sistemas de medición se ve afectado debido a que en su mayoría los voltajes soportados por los equipos son apenas de unos cuantos miles de volts. Es por ello que en este proyecto se han requerido herramientas como lo son las sondas divisoras de voltaje, similar a la que se aprecia en la figura 3.1, permitiendo así la utilización de las herramientas antes comentadas aquí.\\
 
 \begin{figure}[H]
 \centering
@@ -75,7 +75,7 @@ La figura 3.1 muestra un diagrama a bloques de la estructura general del hardwar
 \centering
 \includegraphics[width=12
 cm]{Capitulo3/figs/diagrama.png}
-\caption{Topologia de fuente de alto voltaje}
+\caption{Topología de fuente de alto voltaje}
 \end{figure}
 \newpage
 \subsection{Hardware de interface}
@@ -91,9 +91,9 @@ cm]{Capitulo3/figs/pantalla0.jpg}
 \newpage
 \subsection{Hardware de fuente de voltaje a 180w}
 
-Esta sección consiste en varias etapas de desarrollo, para ello primero se ha desarrollado una fuente de voltaje de 180W, que es el primer circuito a analizar. Podemos observar en la figura 3.2 el diseño propuesto. El cual esta conformado por el regulador de voltaje LM723 en modalidad fuente de voltaje por modalidad de regulación positiva.\\
+Esta sección consiste en varias etapas de desarrollo, para ello primero se ha desarrollado una fuente de voltaje de 180W, que es el primer circuito a analizar. Podemos observar en la figura 3.7 el diseño propuesto. El cual esta conformado por el regulador de voltaje LM723 en modalidad fuente de voltaje por modalidad de regulación positiva.\\
 
-Se ha simulado esta fuente de voltaje en el programa LTSPICE como se muestra en la figura 3.4, en este punto se busca el menor riso posible en nuestra salida final, ya que, en este punto el ruido sera amplificado cientos de veces. Podemos observar en la figura 3.5 que nuestra simulación se acerca bastante a lo buscado, una señal de 12v en corriente directa, teniendo una señal estabilizada en un tiempo de 24ms, suficientemente pequeño para la inicialización de nuestro proyecto. El diseño del PCB se encuentra en la figura 3.6, el cual fue diseñado en el programa EAGLE.\\
+Se ha simulado esta fuente de voltaje en el programa LTSPICE como se muestra en la figura 3.8, en este punto se busca el menor rizo posible en nuestra salida final, ya que, en este punto el ruido sera amplificado cientos de veces. Podemos observar en la figura 3.9 que nuestra simulación se acerca bastante a lo buscado, una señal de 12v en corriente directa, teniendo una señal estabilizada en un tiempo de 24ms, suficientemente pequeño para la inicialización de nuestro proyecto. El diseño del PCB se encuentra en la figura 3.10, el cual fue diseñado en el programa EAGLE.\\
 
 \begin{figure}[H]
 \centering
@@ -118,7 +118,7 @@ Se ha simulado esta fuente de voltaje en el programa LTSPICE como se muestra en 
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=12cm]{Capitulo3/figs/pcb.png}
+\includegraphics[width=11cm]{Capitulo3/figs/pcb.png}
 \caption{Diseño placa de fuente de regulable de 180w}
 \end{figure}
 
@@ -130,7 +130,13 @@ Se ha simulado esta fuente de voltaje en el programa LTSPICE como se muestra en 
 
 \subsection{Hardware inversor}
 
-Para el inversor se ha implementado una topologia del tipo puente H, ya que es una de las mas utilizadas por los desarrolladores. El integrado BTS7960B es un mosfet de potencia bastante robusto y con una comunidad de desarrollo bastante grande, es por ello que se ha seleccionado este modelo entre los miles que existen en el mercado. Podemos observar el diagrama implementado en la figura 3.7 \cite{ibt} y partiendo de el se ha utilizado la placa de desarrollo IBT2 (figura 3.8) por cuestión de costos. \\
+Para el inversor se ha implementado una topología del tipo puente H, ya que es una de las mas utilizadas por los desarrolladores. El integrado BTS7960B \cite{databts} es un mosfet de potencia bastante robusto y con una comunidad de desarrollo bastante grande, es por ello que se ha seleccionado este modelo entre los miles que existen en el mercado. Podemos observar el diagrama implementado en la figura 3.12 \cite{ibt} y partiendo de el se ha utilizado la placa de desarrollo IBT2 (figura 3.11) por cuestión de costos. \\
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=6cm]{Capitulo3/figs/bts.jpg}
+\caption{Placa de desarrollo, puente H IBT-2}
+\end{figure}
 
 \begin{figure}[H]
 \centering
@@ -138,11 +144,7 @@ Para el inversor se ha implementado una topologia del tipo puente H, ya que es u
 \caption{diagrama puente H}
 \end{figure}
 
-\begin{figure}[H]
-\centering
-\includegraphics[width=6cm]{Capitulo3/figs/bts.jpg}
-\caption{diagrama puente H}
-\end{figure}
+
 
 \newpage
 
@@ -156,7 +158,7 @@ Mediante el motor de simulación de LTSPICE se ha realizado el diseño del multi
 \caption{Multiplicador de voltaje 2 niveles}
 \end{figure}
 
-Se han realizado corridas en el simulador con cargas que exigen 1 mA, 10 mA y pruebas sin carga. Podemos observar en la figura 3.10 la salida de CD que se obtiene cuando no tenemos carga alguna, como vemos la salida esta aparentemente libre de riso y este es el punto de referencia para medir la eficiencia de nuestra fuente. El voltaje en color rojo es la primera etapa de nuestro multiplicador, en color azul tenemos la segunda etapa y en color verde la entrada de corriente alterna. 
+Se han realizado corridas en el simulador con cargas que exigen 1 mA, 10 mA y pruebas sin carga. Podemos observar en la figura 3.14 la salida de CD que se obtiene cuando no tenemos carga alguna, como vemos la salida esta aparentemente libre de rizo y este es el punto de referencia para medir la eficiencia de nuestra fuente. El voltaje en color rojo es la primera etapa de nuestro multiplicador, en color azul tenemos la segunda etapa y en color verde la entrada de corriente alterna. 
 
 \begin{figure}[H]
 \centering
@@ -165,7 +167,7 @@ Se han realizado corridas en el simulador con cargas que exigen 1 mA, 10 mA y pr
 \end{figure}
 
 
-Para una carga con una exigencia de 1 mA podemos observar la figura 3.11. Como vemos ahora el riso y la caída en el voltaje es perceptible a simple vista.
+Para una carga con una exigencia de 1 mA podemos observar la figura 3.15. Como vemos ahora el rizo y la caída en el voltaje es perceptible a simple vista.
 
 
 \begin{figure}[H]
@@ -174,7 +176,7 @@ Para una carga con una exigencia de 1 mA podemos observar la figura 3.11. Como v
 \caption{Multiplicador de voltaje con 1 mA de carga}
 \end{figure}
 
-Para una carga con una exigencia de 10 mA podemos observar la figura 3.12. Tenemos una caída de voltaje bastante significativa y un riso bastante pronunciado.
+Para una carga con una exigencia de 10 mA podemos observar la figura 3.16. Tenemos una caída de voltaje bastante significativa y un rizo bastante pronunciado.
 
 
 \begin{figure}[H]
@@ -183,12 +185,12 @@ Para una carga con una exigencia de 10 mA podemos observar la figura 3.12. Tenem
 \caption{Multiplicador de voltaje con 10 mA de carga}
 \end{figure}
 
-Tenemos un voltaje $V_{1mA}=3.9KV$, $V_{10mA}=3.2KV$ y $V_{NL}=4KV$ ahora utilizando la ecuación 2.7 podemos calcular la eficiencia de nuestra fuente y utilizar este punto de referencia para la construcción de nuestro proyecto. Para una carga de 1 mA tenemos $VR_{1mA}=2.5\%$ Y para una carga de 10 mA $VR_{10mA}=20\%$ valor limite para nuestro circuito.
+Tenemos un voltaje $V_{1mA}=3.9KV$, $V_{10mA}=3.2KV$ y $V_{NL}=4KV$ ahora utilizando la ecuación 2.7 podemos calcular la eficiencia de nuestra fuente y utilizar este punto de referencia para la construcción de nuestro proyecto. Para una carga de 1 mA tenemos $VR_{1mA}=2.5\%$ Y para una carga de 10 mA $VR_{10mA}=20\%$ valor límite para nuestro circuito.
 \newpage
 
 \section{Firmware}
 \subsection{Interface gráfica}
-Para el desarrollo de la interface gráfica se ha realizado en el ambiente de programación de Arduino, intentando la utilización de la menor cantidad de librerías de autoria no propia y siguiendo algunas reglas de programación básicas para micro-controladores como lo es la no utilización de los comando delay. Dicho código se divide en varias secciones, para el cual solo se utilizaron las siguientes librerías:
+Para el desarrollo de la interface gráfica se ha realizado en el ambiente de programación de Arduino, intentando la utilización de la menor cantidad de librerías de autoría no propia y siguiendo algunas reglas de programación básicas para micro-controladores como lo es la no utilización de los comando delay. Dicho código se divide en varias secciones, para el cual solo se utilizaron las siguientes librerías:
 
 \begin{verbatim}
 
@@ -197,7 +199,7 @@ Para el desarrollo de la interface gráfica se ha realizado en el ambiente de pr
 
 \end{verbatim}
 
-En la siguiente figura podemos observar la topologia del firmware que se ha desarrollado.\\
+En la siguiente figura podemos observar la topología del firmware que se ha desarrollado.\\
 
 \begin{figure}[H]
 \centering
@@ -289,7 +291,7 @@ void marco1(int x1, int y1, int x2, int y2){
 }
 \end{verbatim}
 
-Mediante el código anterior podemos, con ciertas variables, dibujar nuestra área de trabajo en la pantalla, obteniendo como resultado el dibujo de la figura 3.6.
+Mediante el código anterior podemos, con ciertas variables, dibujar nuestra área de trabajo en la pantalla, obteniendo como resultado el dibujo de la figura 3.19.
 
 \begin{figure}[H]
 \centering
@@ -297,7 +299,7 @@ Mediante el código anterior podemos, con ciertas variables, dibujar nuestra ár
 \caption{Pantalla 1}
 \end{figure}
 
-Mediante esta configuración de dibujo partimos para el código de configuración del TOUCH para lo que llamamos la "pantalla 1".
+Mediante esta configuración de dibujo partimos para el código de configuración del TOUCH para lo que llamamos la ``pantalla 1''.
 
 \begin{verbatim}
 void touch1(){ 
@@ -335,9 +337,9 @@ void touch1(){
 }
 \end{verbatim}
 
-Observamos que el despliegue de estas funciones solo están conformadas por elementos "if" y el llamado a funciones descritas por nosotros se despliegan de la misma manera, resaltando esto debido a que se desarrollo un código lo mas eficientemente posible en cuestión de tiempos de ejecución. \\
+Observamos que el despliegue de estas funciones solo están conformadas por elementos ``if'' y el llamado a funciones descritas por nosotros se despliegan de la misma manera, resaltando esto debido a que se desarrollo un código lo mas eficientemente posible en cuestión de tiempos de ejecución. \\
 
-Dividimos el dibujo de la "pantalla 2" y las funciones para el touch de la pantalla dos en los siguientes codigos:\\
+Dividimos el dibujo de la ``pantalla 2'' y las funciones para el touch de la pantalla dos en los siguientes codigos:\\
 
 Funciones dibujo pantalla 2
 
@@ -380,7 +382,7 @@ void botones2(){
   }
 \end{verbatim}
 
-Podemos observar el resultado del dibujo en la figura 3.14.
+Podemos observar el resultado del dibujo en la figura 3.19.
 
 \begin{figure}[H]
 \centering
@@ -388,7 +390,7 @@ Podemos observar el resultado del dibujo en la figura 3.14.
 \caption{Pantalla 2}
 \end{figure}
 
- Funciones TOUCH pantalla 2:
+ Funciones TOUCH ``pantalla 2'':
 \begin{verbatim}
 void touch2(){
       myTouch.read();
@@ -655,20 +657,20 @@ if(pantalla == 2){
 \newpage
 \section{Implementación del Hardware}
 
-Una vez obtenido el diseño de todas las etapas, así como también la programación del firmware se prosigue a la fabricación de los PCB de la fuente de corriente directa a 180W, el acondicionamiento de la parte digital a la etapa de potencia. Se aisló mediante una caja que solo da acceso al usuario a la parte de salidas y entradas como vemos en la imagen 3.15 Evitando así riesgos al usuario. \\
+Una vez obtenido el diseño de todas las etapas, así como también la programación del firmware se prosigue a la fabricación de los PCB de la fuente de corriente directa a 180W, el acondicionamiento de la parte digital a la etapa de potencia. Se aisló mediante una caja que solo da acceso al usuario a la parte de salidas y entradas como vemos en la imagen 3.20 Evitando así riesgos al usuario. \\
 
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=12cm]{Capitulo3/figs/noimagen.png}
-\caption{Multiplicador de voltaje sin carga}
+\caption{Foto del sistema en general}
 \end{figure}
 
 Una vez terminado el Hardware se hicieron pruebas de cada modulo desarrollado, con la finalidad de indicar las condiciones optimas para el sistema en general, haciendo pruebas con diferentes cargas y observando el ruido obtenido de ellos. 
 
 \subsection{Fuente de 180W}
 
-Se ha terminado la maquinación de la fuente de voltaje en el router LPKF y realizado el ensamble. Se tienen 180 W que pueden ser peligrosos si no se tiene el cuidado necesario, es por ello que se ha optado de aislar el circuito y dejar solamente las salidas y entradas necesarias como podemos ver en la imagen 1.17.
+Se ha terminado la maquinación de la fuente de voltaje en el router LPKF y realizado el ensamble. Se tienen 180 W que pueden ser peligrosos si no se tiene el cuidado necesario, es por ello que se ha optado de aislar el circuito y dejar solamente las salidas y entradas necesarias como podemos ver en la imagen 3.21.
 
 \begin{figure}[H]
 \centering
@@ -676,7 +678,7 @@ Se ha terminado la maquinación de la fuente de voltaje en el router LPKF y real
 \caption{Multiplicador de voltaje sin carga}
 \end{figure}
 
-Se ha optado hacer pruebas a 12V y cargas de 7.5 OHMS, 15 OHMS y una prueba sin carga, esperando obtener el menor ruido posible. La configuración para el experimento se puede observar en la figura 3.17. Mediante estos resultados se ha echo una gráfica gaussiana para determinar el voltaje RMS en cada experimento. 
+Se ha optado hacer pruebas a 12V y cargas de 7.5 OHMS, 15 OHMS y una prueba sin carga, esperando obtener el menor ruido posible. La configuración para el experimento se puede observar en la figura 3.17. Mediante estos resultados se ha creado una gráfica gaussiana para determinar el voltaje RMS en cada experimento. 
 
 
 
@@ -718,11 +720,11 @@ Este modulo ha sido aislado de la misma manera que se aisló la fuente de 180W (
 \caption{Implementación inversor salida con carga inductiva.}
 \end{figure}
 
-Mediante estas configuraciones se obtuvieron las mediciones que se pueden ver en las figuras XXX para cada configuración respectivamente. 
+Mediante estas configuraciones se obtuvieron las mediciones que se pueden ver en las figuras para cada configuración respectivamente. 
 
 \subsection{Multiplicador de voltaje}
 
-Existen aspectos claves para este apartado que definirán la calidad de nuestra salida, es por ello que se han realizado pruebas variando algunos aspectos como lo son la frecuencia y el ciclo de trabajo incidente en la bobina primaria del transformador de alto voltaje. Podemos observar el circuito desarrollado (figura 3.23) y mediante mediciones sin carga se observa el voltaje de salida con el osciloscopio (figura 3.24)
+Existen aspectos claves para este apartado que definirán la calidad de nuestra salida, es por ello que se han realizado pruebas variando algunos aspectos como lo son la frecuencia y el ciclo de trabajo incidente en la bobina primaria del transformador de alto voltaje. Podemos observar el circuito desarrollado (figura 3.27) y mediante mediciones sin carga se observa el voltaje de salida con el osciloscopio (figura 3.24)
 
 \begin{figure}[H]
 \centering
